crates/nash-report/tests/can/snapshots/can__module__tests__labeled_ctor_pattern_duplicate_field_error.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\ntype packet = Packet { z : unit }\nget (Packet { z, z }) = z\n"
info: diagnostic
---
nash::names::duplicate_pattern

  × The `get` function has multiple `z` arguments.
   ╭─[src/Main.nash:3:18]
 2 │ type packet = Packet { z : unit }
 3 │ get (Packet { z, z }) = z
   ·               ┬  ┬
   ·               │  ╰── and another first definition
   ·               ╰── first definition
   ╰────
  help: Rename one of the definitions.
